--- a/index.html
+++ b/index.html
@@ -171,6 +171,10 @@
             Tyrells House Cards:
             <textarea name="housecards-tyrell"></textarea>
         </label>
+	    <label class="fullwidth">
+            Vassals Cards:
+            <textarea name="housecards-vassals"></textarea>
+        </label>
     </div>
     <input type="radio" name="navContentControl" id="arrynStuff">
     <div class="navContent">
