--- a/index.html
+++ b/index.html
@@ -440,6 +440,39 @@
 		<input type="checkbox" name="housecard-6-tyrell" id="housecard-6-tyrell">
 		<label for="housecard-6-tyrell"></label>
     </div>
+	  <input type="radio" name="navContentControl" id="vassalsstuff">
+    <div class="navContent">
+        <label class="fullwidth">
+            Units:
+            <textarea name="units-tyrell"></textarea>
+        </label>
+        <label class="fullwidth">
+            Orders (m-1, m+0, m+1, nm-1, s, s*, ns, cp, cp*, ib, d, d*, r, r*; vassals - m+0, d+3, d-m, s-r):
+            <textarea name="orders-tyrell"></textarea>
+        </label>
+        <label class="fullwidth">
+            Powertokens in Areas:
+            <textarea name="powertokens-tyrell"></textarea>
+        </label>
+        <label class="fullwidth">
+            Available Power Tokens:
+            <input name="availablePowertokens-tyrell" type="number" min="0" max="20" step="1" value="5">
+        </label>
+		<input type="checkbox" name="housecard-0-vassals" id="housecard-0-vassals">
+		<label for="housecard-0-vassals"></label>
+		<input type="checkbox" name="housecard-1-vassals" id="housecard-1-vassals">
+		<label for="housecard-1-vassals"></label>
+		<input type="checkbox" name="housecard-2-vassals" id="housecard-2-vassals">
+		<label for="housecard-2-vassals"></label>
+		<input type="checkbox" name="housecard-3-vassals" id="housecard-3-vassals">
+		<label for="housecard-3-vassals"></label>
+		<input type="checkbox" name="housecard-4-vassals" id="housecard-4-vassals">
+		<label for="housecard-4-vassals"></label>
+		<input type="checkbox" name="housecard-5-vassals" id="housecard-5-vassals">
+		<label for="housecard-5-vassals"></label>
+		<input type="checkbox" name="housecard-6-vassals" id="housecard-6-vassals">
+		<label for="housecard-6-vassals"></label>
+    </div>
 </div>
 <div class="board">
     <input type="checkbox" id="toggleUnits" checked="checked">
