--- a/index.html
+++ b/index.html
@@ -444,19 +444,19 @@
     <div class="navContent">
         <label class="fullwidth">
             Units:
-            <textarea name="units-tyrell"></textarea>
+            <textarea name="units-vassals"></textarea>
         </label>
         <label class="fullwidth">
             Orders (m-1, m+0, m+1, nm-1, s, s*, ns, cp, cp*, ib, d, d*, r, r*; vassals - m+0, d+3, d-m, s-r):
-            <textarea name="orders-tyrell"></textarea>
+            <textarea name="orders-vassals"></textarea>
         </label>
         <label class="fullwidth">
             Powertokens in Areas:
-            <textarea name="powertokens-tyrell"></textarea>
+            <textarea name="powertokens-vassals"></textarea>
         </label>
         <label class="fullwidth">
             Available Power Tokens:
-            <input name="availablePowertokens-tyrell" type="number" min="0" max="20" step="1" value="5">
+            <input name="availablePowertokens-vassals" type="number" min="0" max="20" step="1" value="5">
         </label>
 		<input type="checkbox" name="housecard-0-vassals" id="housecard-0-vassals">
 		<label for="housecard-0-vassals"></label>
