--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
             <textarea name="units-arryn"></textarea>
         </label>
         <label class="fullwidth">
-            Orders (m-1, m+0, m+1, nm-1, s, s*, ns, cp, cp*, ib, d, d*, r, r*; vassals - m+0, d+3, d-m, s-r):
+            Orders (m-1, m+0, m+1, nm-1, s, s*, ns, cp, cp*, b, d, d*, r, r*; vassals - m+0, d+3, d-m, s-r):
             <textarea name="orders-arryn"></textarea>
         </label>
         <label class="fullwidth">
@@ -216,7 +216,7 @@
             <textarea name="units-baratheon"></textarea>
         </label>
         <label class="fullwidth">
-            Orders (m-1, m+0, m+1, nm-1, s, s*, ns, cp, cp*, ib, d, d*, r, r*; vassals - m+0, d+3, d-m, s-r):
+            Orders (m-1, m+0, m+1, nm-1, s, s*, ns, cp, cp*, b, d, d*, r, r*; vassals - m+0, d+3, d-m, s-r):
             <textarea name="orders-baratheon"></textarea>
         </label>
         <label class="fullwidth">
@@ -249,7 +249,7 @@
             <textarea name="units-greyjoy"></textarea>
         </label>
         <label class="fullwidth">
-            Orders (m-1, m+0, m+1, nm-1, s, s*, ns, cp, cp*, ib, d, d*, r, r*; vassals - m+0, d+3, d-m, s-r):
+            Orders (m-1, m+0, m+1, nm-1, s, s*, ns, cp, cp*, b, d, d*, r, r*; vassals - m+0, d+3, d-m, s-r):
             <textarea name="orders-greyjoy"></textarea>
         </label>
         <label class="fullwidth">
@@ -282,7 +282,7 @@
             <textarea name="units-lannister"></textarea>
         </label>
         <label class="fullwidth">
-            Orders (m-1, m+0, m+1, nm-1, s, s*, ns, cp, cp*, ib, d, d*, r, r*; vassals - m+0, d+3, d-m, s-r):
+            Orders (m-1, m+0, m+1, nm-1, s, s*, ns, cp, cp*, b, d, d*, r, r*; vassals - m+0, d+3, d-m, s-r):
             <textarea name="orders-lannister"></textarea>
         </label>
         <label class="fullwidth">
@@ -315,7 +315,7 @@
             <textarea name="units-martell"></textarea>
         </label>
         <label class="fullwidth">
-            Orders (m-1, m+0, m+1, nm-1, s, s*, ns, cp, cp*, ib, d, d*, r, r*; vassals - m+0, d+3, d-m, s-r):
+            Orders (m-1, m+0, m+1, nm-1, s, s*, ns, cp, cp*, b, d, d*, r, r*; vassals - m+0, d+3, d-m, s-r):
             <textarea name="orders-martell"></textarea>
         </label>
         <label class="fullwidth">
@@ -348,7 +348,7 @@
             <textarea name="units-stark"></textarea>
         </label>
         <label class="fullwidth">
-            Orders (m-1, m+0, m+1, nm-1, s, s*, ns, cp, cp*, ib, d, d*, r, r*; vassals - m+0, d+3, d-m, s-r):
+            Orders (m-1, m+0, m+1, nm-1, s, s*, ns, cp, cp*, b, d, d*, r, r*; vassals - m+0, d+3, d-m, s-r):
             <textarea name="orders-stark"></textarea>
         </label>
         <label class="fullwidth">
@@ -381,7 +381,7 @@
             <textarea name="units-targaryen"></textarea>
         </label>
         <label class="fullwidth">
-            Orders (m-1, m+0, m+1, nm-1, s, s*, ns, cp, cp*, ib, d, d*, r, r*; vassals - m+0, d+3, d-m, s-r):
+            Orders (m-1, m+0, m+1, nm-1, s, s*, ns, cp, cp*, b, d, d*, r, r*; vassals - m+0, d+3, d-m, s-r):
             <textarea name="orders-targaryen"></textarea>
         </label>
         <label class="fullwidth">
@@ -414,7 +414,7 @@
             <textarea name="units-tyrell"></textarea>
         </label>
         <label class="fullwidth">
-            Orders (m-1, m+0, m+1, nm-1, s, s*, ns, cp, cp*, ib, d, d*, r, r*; vassals - m+0, d+3, d-m, s-r):
+            Orders (m-1, m+0, m+1, nm-1, s, s*, ns, cp, cp*, b, d, d*, r, r*; vassals - m+0, d+3, d-m, s-r):
             <textarea name="orders-tyrell"></textarea>
         </label>
         <label class="fullwidth">
