--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
 		<input type="checkbox" name="housecard-6-tyrell" id="housecard-6-tyrell">
 		<label for="housecard-6-tyrell"></label>
     </div>
-    <input type="radio" name="navContentControl" id="vassalsstuff">
+    <input type="radio" name="navContentControl" id="vassalsStuff">
     <div class="navContent">
         
       </label>
