--- a/index.html
+++ b/index.html
@@ -123,7 +123,80 @@
         <label class="fullwidth">
             <button onclick="moveIronBankLeft();">Move Iron Bank cards left</button>
         </label>
-        <label class="fullwidth">
+	    <label class="fullwidth">
+			Westeros Card 1:
+			<select name="westeros-card-1">
+				<option value="empty" selected="selected">Empty</option>
+				<option value="customs_officer">Customs Officer</option>
+				<option value="expert_artificer">Expert Artificer</option>
+				<option value="full_host">Full Host</option>
+				<option value="loyal_maester">Loyal Maester</option>
+				<option value="master-at-arms">Master-at-Arms</option>
+				<option value="pyromancer">Pyromancer</option>
+				<option value="savvy_steward">Savvy Steward</option>
+				<option value="sea_raiders">Sea Raiders</option>
+				<option value="siege_engineers">Siege Engineers</option>
+				<option value="spymaster">Spymaster</option>
+				<option value="the_faceless_men">The Faceless Men</option>
+				<option value="vanguard_cavalry">Vanguard Cavalry</option>
+			</select>
+		</label>
+	    <label class="fullwidth">
+			Westeros Card 2:
+			<select name="westeros-card-2">
+				<option value="empty" selected="selected">Empty</option>
+				<option value="customs_officer">Customs Officer</option>
+				<option value="expert_artificer">Expert Artificer</option>
+				<option value="full_host">Full Host</option>
+				<option value="loyal_maester">Loyal Maester</option>
+				<option value="master-at-arms">Master-at-Arms</option>
+				<option value="pyromancer">Pyromancer</option>
+				<option value="savvy_steward">Savvy Steward</option>
+				<option value="sea_raiders">Sea Raiders</option>
+				<option value="siege_engineers">Siege Engineers</option>
+				<option value="spymaster">Spymaster</option>
+				<option value="the_faceless_men">The Faceless Men</option>
+				<option value="vanguard_cavalry">Vanguard Cavalry</option>
+			</select>
+		</label>
+	    <label class="fullwidth">
+			Westeros Card 3:
+			<select name="westeros-card-3">
+				<option value="empty" selected="selected">Empty</option>
+				<option value="customs_officer">Customs Officer</option>
+				<option value="expert_artificer">Expert Artificer</option>
+				<option value="full_host">Full Host</option>
+				<option value="loyal_maester">Loyal Maester</option>
+				<option value="master-at-arms">Master-at-Arms</option>
+				<option value="pyromancer">Pyromancer</option>
+				<option value="savvy_steward">Savvy Steward</option>
+				<option value="sea_raiders">Sea Raiders</option>
+				<option value="siege_engineers">Siege Engineers</option>
+				<option value="spymaster">Spymaster</option>
+				<option value="the_faceless_men">The Faceless Men</option>
+				<option value="vanguard_cavalry">Vanguard Cavalry</option>
+			</select>
+		</label>
+	    <label class="fullwidth">
+			Westeros Card 4:
+			<select name="westeros-card-4">
+				<option value="empty" selected="selected">Empty</option>
+				<option value="customs_officer">Customs Officer</option>
+				<option value="expert_artificer">Expert Artificer</option>
+				<option value="full_host">Full Host</option>
+				<option value="loyal_maester">Loyal Maester</option>
+				<option value="master-at-arms">Master-at-Arms</option>
+				<option value="pyromancer">Pyromancer</option>
+				<option value="savvy_steward">Savvy Steward</option>
+				<option value="sea_raiders">Sea Raiders</option>
+				<option value="siege_engineers">Siege Engineers</option>
+				<option value="spymaster">Spymaster</option>
+				<option value="the_faceless_men">The Faceless Men</option>
+				<option value="vanguard_cavalry">Vanguard Cavalry</option>
+			</select>
+		</label>
+	    
+       <label class="fullwidth">
             Wildlings: <input type="number" step="2" min="0" max="12" value="2" name="wildlings">
         </label>
         <label class="fullwidth">
