--- a/index.html
+++ b/index.html
@@ -125,9 +125,9 @@
         </label>
 	    <label class="fullwidth">
 			Westeros Card 1:
-			<select name="westeros-card-1">
+			<select name="westeroscard-1">
 				<option value="empty" selected="selected">Empty</option>
-				<option value="customs_officer">Customs Officer</option>
+				<option value="supply">Supply</option>
 				<option value="expert_artificer">Expert Artificer</option>
 				<option value="full_host">Full Host</option>
 				<option value="loyal_maester">Loyal Maester</option>
@@ -143,7 +143,7 @@
 		</label>
 	    <label class="fullwidth">
 			Westeros Card 2:
-			<select name="westeros-card-2">
+			<select name="westeroscard-2">
 				<option value="empty" selected="selected">Empty</option>
 				<option value="customs_officer">Customs Officer</option>
 				<option value="expert_artificer">Expert Artificer</option>
@@ -161,7 +161,7 @@
 		</label>
 	    <label class="fullwidth">
 			Westeros Card 3:
-			<select name="westeros-card-3">
+			<select name="westeroscard-3">
 				<option value="empty" selected="selected">Empty</option>
 				<option value="customs_officer">Customs Officer</option>
 				<option value="expert_artificer">Expert Artificer</option>
@@ -179,7 +179,7 @@
 		</label>
 	    <label class="fullwidth">
 			Westeros Card 4:
-			<select name="westeros-card-4">
+			<select name="westeroscard-4">
 				<option value="empty" selected="selected">Empty</option>
 				<option value="customs_officer">Customs Officer</option>
 				<option value="expert_artificer">Expert Artificer</option>
