--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
 			Westeros Card 2:
 			<select name="westeros-card-2">
 				<option value="empty" selected="selected">Empty</option>
+				<option value="supply">Supply</option>
 				<option value="customs_officer">Customs Officer</option>
 				<option value="expert_artificer">Expert Artificer</option>
 				<option value="full_host">Full Host</option>
@@ -163,6 +164,7 @@
 			Westeros Card 3:
 			<select name="westeros-card-3">
 				<option value="empty" selected="selected">Empty</option>
+				<option value="supply">Supply</option>
 				<option value="customs_officer">Customs Officer</option>
 				<option value="expert_artificer">Expert Artificer</option>
 				<option value="full_host">Full Host</option>
@@ -181,6 +183,7 @@
 			Westeros Card 4:
 			<select name="westeros-card-4">
 				<option value="empty" selected="selected">Empty</option>
+				<option value="supply">Supply</option>
 				<option value="customs_officer">Customs Officer</option>
 				<option value="expert_artificer">Expert Artificer</option>
 				<option value="full_host">Full Host</option>
